--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body{
 }
 
 .container {
-  max-width: 350px;
+  max-width: 670px;
   background: #F8F9FD;
   background: linear-gradient(0deg, rgb(255, 255, 255) 0%, rgb(244, 247, 251) 100%);
   border-radius: 40px;
@@ -24,6 +24,7 @@ body{
   border: 5px solid rgb(255, 255, 255);
   box-shadow: rgba(133, 189, 215, 0.8784313725) 0px 30px 30px -20px;
   margin: 20px;
+  opacity: 0.6;
 }
 
 .heading {
