Add a README file

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body{
-  background: url(nairobi-2730268.jpg);
+  background: url(./assets/nairobi-2730268.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
